<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lane_assist_package</name>
  <version>0.0.0</version>
  <description>ROS 2 package for lane detection and robot assistance using OpenCV.</description>
  <maintainer email="kulka136@msu.edu">kulka136</maintainer>
  <license>Apache-2.0</license>

  <!-- Build and runtime dependencies -->
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>

  <!-- Optional test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>